@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-07-02T16:09:03Z",
-  "count_outdated" : 1661,
-  "uniques_outdated" : 103,
-  "count" : 1681,
+  "timestamp" : "2022-07-03T00:42:20Z",
+  "count_outdated" : 1683,
+  "uniques_outdated" : 104,
+  "count" : 1700,
   "uniques" : 107,
   "views" : [
     {
-      "timestamp": "2022-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 22 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 7,
+      "count": 5,
       "count_minmax": [ 2, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
