@@ -1,15 +1,10 @@
 {
-  "count": 20,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-06-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-19T00:00:00Z",
-      "count": 7,
+      "count": 5,
       "uniques": 1
     },
     {
